[gd_scene load_steps=20 format=2]

[ext_resource path="res://player_walk.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://audio/slash.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/drop.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/pickup.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.60954, 2.85819 )

[sub_resource type="Animation" id=2]
resource_name = "down_idle"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ItemPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.220062, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ItemPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 17.4497, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SwordPosition:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 6.38184, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("SwordPosition:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 8.86719, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SwordPosition:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "down_walk"
length = 0.3
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ItemPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.220062, -0.25, 0, 0.25, 0, -3.30096, -0.25, 0, 0.25, 0, 3.74108, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ItemPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 17.4497, -0.25, 0, 0.25, 0, 17.0095, -0.25, 0, 0.25, 0, 17.4497, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SwordPosition:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 6.38184, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("SwordPosition:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 8.86719, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SwordPosition:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "left_idle"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ItemPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -15.6245, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ItemPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.06464, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SwordPosition:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -8.273, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("SwordPosition:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 4.771, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SwordPosition:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "left_walk"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ItemPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -13.2038, -0.25, 0, 0.25, 0, -12.3236, -0.25, 0, 0.25, 0, -12.3236, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ItemPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.0646362, -0.25, 0, 0.25, 0, 3.36559, -0.25, 0, 0.25, 0, -2.136, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SwordPosition:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -8.273, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("SwordPosition:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 4.771, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SwordPosition:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
resource_name = "right_idle"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SwordPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 8.27259, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SwordPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 4.77057, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SwordPosition:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "right_walk"
length = 0.3
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ItemPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 10.1229, -0.25, 0, 0.25, 0, 12.1035, -0.25, 0, 0.25, 0, 11.4433, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ItemPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.0646439, -0.25, 0, 0.25, 0, 3.58566, -0.25, 0, 0.25, 0, -2.79619, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SwordPosition:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 8.27259, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("SwordPosition:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 4.77057, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SwordPosition:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
resource_name = "up_idle"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ItemPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ItemPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -18.8608, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SwordPosition:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 6.382, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("SwordPosition:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -3.585, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SwordPosition:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=9]
resource_name = "up_walk"
length = 0.3
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 6, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ItemPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2.20063, -0.25, 0, 0.25, 0, -2.42071, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ItemPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -18.8608, -0.25, 0, 0.25, 0, -18.8608, -0.25, 0, 0.25, 0, -19.521, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SwordPosition:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 6.382, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("SwordPosition:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -3.585, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SwordPosition:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="CircleShape2D" id=10]
radius = 22.2203

[sub_resource type="Animation" id=11]
resource_name = "down_slash"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("SwordPosition:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 6.38184, -0.25, 0, 0.25, 0, 17.6051, -0.25, 0, 0.25, 0, -16.9449, -0.25, 0, 0.25, 0, 6.38184, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SwordPosition:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 8.86719, -0.25, 0, 0.25, 0, 16.1293, -0.25, 0, 0.25, 0, 9.52739, -0.25, 0, 0.25, 0, 8.86719, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SwordPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 180, -0.25, 0, 0.25, 0, 150, -0.25, 0, 0.25, 0, 270, -0.25, 0, 0.25, 0, 180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordPosition/AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[sub_resource type="Animation" id=12]
resource_name = "left_slash"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("SwordPosition:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -8.273, -0.25, 0, 0.25, 0, -9.5335, -0.25, 0, 0.25, 0, -12.6848, -0.25, 0, 0.25, 0, -8.273, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SwordPosition:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 4.771, -0.25, 0, 0.25, 0, 14.2248, -0.25, 0, 0.25, 0, -12.2458, -0.25, 0, 0.25, 0, 4.771, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SwordPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -90, -0.25, 0, 0.25, 0, -165, -0.25, 0, 0.25, 0, 330, -0.25, 0, 0.25, 0, -90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordPosition/AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[sub_resource type="Animation" id=13]
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("SwordPosition:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 8.27259, -0.25, 0, 0.25, 0, 9.84823, -0.25, 0, 0.25, 0, 13.6297, -0.25, 0, 0.25, 0, 8.27259, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SwordPosition:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 4.77057, -0.25, 0, 0.25, 0, 16.7453, -0.25, 0, 0.25, 0, -10.9857, -0.25, 0, 0.25, 0, 4.77057, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SwordPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 135, -0.25, 0, 0.25, 0, 44.9999, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordPosition/AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[sub_resource type="Animation" id=14]
resource_name = "up_slash"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("SwordPosition:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 6.382, -0.25, 0, 0.25, 0, 15.8358, -0.25, 0, 0.25, 0, -15.3616, -0.25, 0, 0.25, 0, 6.382, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SwordPosition:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -3.585, -0.25, 0, 0.25, 0, -11.148, -0.25, 0, 0.25, 0, -12.0934, -0.25, 0, 0.25, 0, -3.585, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SwordPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 59.9999, -0.25, 0, 0.25, 0, -59.9999, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordPosition/AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8.51805 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9
frame = 6

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "down_idle"
anims/down_idle = SubResource( 2 )
anims/down_walk = SubResource( 3 )
anims/left_idle = SubResource( 4 )
anims/left_walk = SubResource( 5 )
anims/right_idle = SubResource( 6 )
anims/right_walk = SubResource( 7 )
anims/up_idle = SubResource( 8 )
anims/up_walk = SubResource( 9 )

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2066

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 10 )

[node name="ItemPosition" type="Node2D" parent="."]
position = Vector2( 0, -18.8608 )

[node name="SwordPosition" type="Node2D" parent="."]
position = Vector2( -16.9449, 9.52739 )
rotation = 4.71239

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SwordPosition"]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="AnimSlash" type="AnimationPlayer" parent="."]
anims/down_slash = SubResource( 11 )
anims/left_slash = SubResource( 12 )
anims/right_slash = SubResource( 13 )
anims/up_slash = SubResource( 14 )

[node name="pickupsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="dropsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="animation_finished" from="AnimSlash" to="." method="_on_AnimSlash_animation_finished"]
